src/assets/styles/main.scss
@use './common.scss';

@font-face {
    font-family: 'Montserrat Bold';
    src: url('/fonts/Montserrat\ Bold.ttf');
}

@font-face {
    font-family: 'Montserrat Black';
    src: url('/fonts/Montserrat\ Black.ttf');
}

@font-face {
    font-family: 'Montserrat Medium';
    src: url('/fonts/Montserrat\ Medium.ttf');
}

@font-face {
    font-family: 'Montserrat Regular';
    src: url('/fonts/Montserrat\ Regular.ttf');
}

html {
    scrollbar-width: none;
}

body {
    font-family:
        Inter,
        -apple-system,
        BlinkMacSystemFont,
        'Segoe UI',
        Roboto,
        Oxygen,
        Ubuntu,
        Cantarell,
        'Fira Sans',
        'Droid Sans',
        'Helvetica Neue',
        sans-serif;

    font-size: 2.5vmin;
    color: white;
    background: var(--color-background);
    min-height: 100vh;

    @media (orientation: portrait) {
        font-size: 2vmax;
        letter-spacing: 0.1em;
    }

    transition:
        color 0.5s,
        background-color 0.5s;

    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    --color-text: #ffffff;
    --color-primary: #156841;
    --color-secondary: #ffa931;
    --color-accent: #1f945d8c;
    --color-background: #000000;
    --color-hover: #27aa6d;
    --color-hover-secondary: #d96c06;

    --header-height: 10vh;
    --header-margin-x: 10%;
}

#app {
    font-family: 'Montserrat Regular', sans-serif;
    font-weight: normal;
    margin: 0 auto;
    color: var(--color-text);
    background-color: var(--color-background);
}

.view {
    margin: 1em var(--header-margin-x);

    span.view-title {
        margin: 3vmin auto;
        font-size: 3vmin;
    }
}

*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
    font-weight: normal;
}

.btn {
    position: relative;
    @include flex-container(column);
    border-radius: 0.1em;
    padding: 0.5em 1em;
    margin: auto 1vmin;

    color: var(--color-text);
    text-decoration: none;
    transition: all 0.25s;
    background: none;
    border: none;
    cursor: pointer;
    font-size: 1em;

    &:hover {
        background-color: rgba(255, 255, 255, 0.2);
        color: var(--color-hover);
        scale: 1.1;
    }

    &.active {
        background-color: rgba(255, 255, 255, 0.1);
        color: var(--color-primary);
        text-decoration: underline;
    }
}

